# military-aircraft-detection

./: .gitignore  README.md  pyproject.toml
checkpoints/finetuned/: oriented_rccn_latest.pth  r3det_latest.pth  roitrans_latest.pth
checkpoints/pretrained/: oriented_rcnn_r50_fpn_1x_dota_le90-6d2b2ce0.pth  r3det_tiny_r50_fpn_1x_dota_oc-c98a616c.pth  roi_trans_r50_fpn_1x_dota_ms_rr_le90-fa99496f.pth
src/: app.py  inference.py  registry.py  train.py
src/configs/: train_oriented_rcnn.yaml  train_r3det.yaml  train_roitrans.yaml
src/configs/augmentations/: default_augs.yaml
src/configs/callbacks/: defaults.yaml
src/configs/dataset/: dataset.yaml
src/configs/hydra/: default.yaml
src/configs/logger/: tensorboard.yaml
src/configs/model/: oriented_rcnn.yaml  r3det.yaml  roi_transformer.yaml
src/configs/optimizer/: sgd.yaml
src/configs/trainer/: default.yaml
src/core/: config_builder.py  trainer.py
src/core/hooks/: early_stopping.py
src/datasets/: dota_aircraft.py
src/utils/: converter_to_dota_dataset.py  utils.py  visualize_gt.py
