[project]
name = "military-aircraft-detection"
version = "0.1.0"
description = "Military Aircraft Detection"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.26.3",
    "opencv-python==4.8.1.78",
    "mmcv-full==1.7.2",
    "mmdet==2.28.2",
    "torch==1.12.1",
    "torchvision==0.13.1",
    "torchaudio==0.12.1",
    "tensorboard==2.17.0",
    "hydra-core>=1.3.2",
    "pre-commit>=4.3.0",
    "omegaconf>=2.3.0",
    "setuptools<70.0.0",
    "defusedxml>=0.7.1",
    "tqdm>=4.67.1",
    "mmrotate==0.3.4",
    "gradio>=6.2.0",
    "loguru>=0.7.0",
]

[tool.uv]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu116/torch1.12.0/index.html"
]

index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff]
exclude = [".venv", "venv", ".git", "data", ".eggs", "*.ipynb", "lib/"]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "TRY003", "D100", "D104", "D105", "D107",
  "G004", "EM101", "EM102", "Q000", "COM812", "N812",
  "PLR0913", "S101", "D417", "ANN002", "ANN003",
  "FIX002", "TD003", "F631", "ERA001", "PLR0915", "C901", "BLE001"
]

[tool.ruff.format]
docstring-code-format = true
quote-style = 'single'
skip-magic-trailing-comma = true

[build-system]
requires = ["setuptools>=65.0,<70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["military_aircraft_detection"]
